Fix logo margin on mobile menu.

--- a/assets/app.css
+++ b/assets/app.css
@@ -563,6 +563,10 @@ video {
 .z-20 {
   z-index: 20;
 }
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
 .-mr-8 {
   margin-right: -2rem;
 }
@@ -589,6 +593,9 @@ video {
 }
 .mt-6 {
   margin-top: 1.5rem;
+}
+.ml-6 {
+  margin-left: 1.5rem;
 }
 .block {
   display: block;
@@ -752,6 +759,10 @@ video {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 .pb-3 {
   padding-bottom: 0.75rem;
